fix: layout inconsistencies and alignments

--- a/src/Pages/Home/components/ToolsGrid/styles.css
+++ b/src/Pages/Home/components/ToolsGrid/styles.css
@@ -8,6 +8,14 @@
   grid-template-rows: repeat(6, 1fr);
 }
 
+.tools__grid::before {
+    content: '';
+    width: 0;
+    padding-bottom: 100%;
+    grid-row: 1 / 1;
+    grid-column: 1 / 1;
+}
+
 .tools__grid--call-to-action {
   margin: 0 2rem;
   width: 21rem;
@@ -22,7 +30,7 @@
 .tools__grid--call-to-action h3 {
   color: var(--slate-500);
   font-size: 1.125rem;
-  margin: 1rem 0;
+  padding: 1rem 0;
 }
 
 .tools__grid--icon {
@@ -96,11 +104,18 @@
 @media screen and (max-width: 1200px) {
   .tools {
     padding: 0 2rem;
-  }  
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .tools {
+    padding: 0;
+  }
 }
 
 @media screen and (max-width: 870px) {
   
+
   .tools {
     padding: 3.5rem 1rem;
   }
@@ -112,25 +127,18 @@
   }
 
   .tools__grid--call-to-action {
-    height: 5rem;
-    margin: 0;
-    width: 10rem;
-  }
-  
-  .tools__grid--call-to-action h2 {
-    font-size: 1.125rem;
-    font-weight: 600;
-    letter-spacing: -1px;
-  }
-  
-  .tools__grid--call-to-action h3 {
-    color: var(--slate-500);
-    font-size: 0.75rem;
     margin: 0;
   }
 
-  .tools__grid--icon img {
-    width: 2.5rem;
+  .tools__grid--call-to-action:nth-child(2), 
+  .tools__grid--call-to-action h2:nth-child(2) {
+    padding-top: 11.5rem;
+    padding-left: 0.5rem;
+  }
+
+  .tools__grid--call-to-action:nth-child(3), 
+  .tools__grid--call-to-action h2:nth-child(3) {
+    padding-top: 12.5rem;
   }
 
   .div1 { grid-area: 1 / 1 / 3 / 3; }
@@ -147,6 +155,57 @@
   .div12 { grid-area: 7 / 3 / 8 / 4; }
   .div13 { grid-area: 7 / 4 / 8 / 5; }
 }
+
+@media screen and (max-width: 768px) {
+  .tools__grid--call-to-action h2 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    letter-spacing: -1px;
+  }
+  .tools__grid--call-to-action h3 {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .tools__grid--icon img {
+    padding: 1.5rem;
+  }
+
+  .tools__grid--call-to-action {
+    height: 5rem;
+    width: auto;
+  }
+  
+  .tools__grid--call-to-action h2 {
+    font-size: 1.125rem;
+    font-weight: 600;
+    letter-spacing: -1px;
+  }
+
+  .tools__grid--call-to-action h2:first-child {
+    width: 10rem;
+  }
+
+  .tools__grid--call-to-action:nth-child(2), 
+  .tools__grid--call-to-action h2:nth-child(2) {
+    padding-top: 0rem;
+    padding-left: 1rem;
+    width: auto;
+  }
+
+  .tools__grid--call-to-action:nth-child(3), 
+  .tools__grid--call-to-action h2:nth-child(3) {
+    padding: 0;
+    width: auto;
+  }
+  
+  .tools__grid--call-to-action h3 {
+    color: var(--slate-500);
+    font-size: 0.75rem;
+  }
+}
+
 
 .dark {
   .div2, .div3, .div6, .div10, .div11 {
